--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,171 @@
 /* Add CSS styling here */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	/* border: 0; */
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*Universal style including box around borders to separate*/
+
+* {
+    box-sizing: border-box;
+    padding: 0%;
+    margin: 0%;
+    max-width: 100%;
+    /* border: 2px solid lightblue; */
+    font-family: 'Patrick Hand', cursive;
+}
+
+/*General Styles*/
+
+html {
+    font-size: 62.5%;
+    font-family: 'Patrick Hand', cursive;
+    
+}
+
+header nav {
+    font-size: 2em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.top {
+    display: flex;
+    justify-content: center;
+}
+
+.image-button {
+    background-image: url(https://picsum.photos/600/400);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    font-size: large;
+    width: 600px;
+    height: 400px;
+}
+
+footer {
+    background-color: lightgrey;
+    padding: 20px;
+    text-align: center;
+
+}
+
+.portfolio1 .portfolio2 {
+    display: flex;
+    flex-direction: row reve;
+ }
+
+ .row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 20px;
+ }
+
+.portfolio {
+    text-align: center;
+}
+
+button {
+    background-color: white;
+    color: black;
+    border: black solid 1px;
+    padding: 5px 10px;
+}
+
+button:hover {
+    background-color: black;
+    color: white;
+    border: white solid 1px;
+
+}
+
+
+
+
+
+button a {
+    text-decoration: none;
+    color: inherit;  /*color is inherited from it's parent */
+  } 
+
+  /* a hover {
+    background-color: black;
+  }
+header .name {
+    font-size: 5rem;
+}
+
+.top .myprojects img {
+    margin: 10px;
+    
+    display: flex;
+    justify-content: center;
+}
+#portfolio1 {
+    margin: 5px;
+    padding: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-align: center;
+}
+#portfolio2 {
+    margin: 5px;
+    padding: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+
+ */
